--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ djangorestframework==3.14.0
 django-cors-headers==4.3.1
 djangorestframework-simplejwt==5.3.0
 python-decouple==3.8
-Pillow==9.5.0 
+Pillow==10.4.0
+psycopg2-binary==2.9.9
+gunicorn==21.2.0 
